Created title page

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Arche-engine</title>
+    <title>Arche-Engine</title>
   </head>
-
+  
   <body>
 
     <!-- HEADER -->
@@ -18,13 +18,13 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/omegachysis/arche-engine">View on GitHub</a>
 
-          <h1 id="project_title">Arche-engine</h1>
-          <h2 id="project_tagline">a pygame powered game engine</h2>
+          <h1 id="project_title">Arche-Engine</h1>
+          <h2 id="project_tagline">An open-source, Pygame powered engine written completely in Python and made for visual development.</h2>
 
-            <section id="downloads">
+<!--             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/omegachysis/arche-engine/zipball/master">Download this project as a .zip file</a>
               <a class="tar_download_link" href="https://github.com/omegachysis/arche-engine/tarball/master">Download this project as a tar.gz file</a>
-            </section>
+            </section> -->
         </header>
     </div>
 
